<resources>
    <string name="app_name">Android Course</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_repeat_password">Repeat your Password</string>
    <string name="prompt_username">Username</string>
    <string name="ivPlay_name">Playbutton</string>
    <string name="tvScore">Score:</string>
    <string name="ivMain">Startscreen</string>
    <string name="btnLeaderboard">Leaderboard + Stats</string>
    <string name="btnEndless">Endless Mode</string>
    <string name="btnFindCure">Find the Cure</string>

    <string-array name="difficultyFindCure">
        <item>Easy (Range: 100)</item>
        <item>Medium (Range: 1000)</item>
        <item>Hard (Range: 10000)</item>
        <item>Impossible! (Range: 100000)</item>
    </string-array>
    <string name="title_activity_leaderboard__stats">Leaderboard_Stats</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
