<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:id="@+id/linearLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/relativeLayout">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ivMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/ivMain"
            android:scaleType="centerCrop"
            android:src="@drawable/main_menu_bg" />

        <TableRow
            android:id="@+id/topTable"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/tvScore"
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvCurrentScore"
                android:layout_width="176dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/moneybag"
                android:layout_width="53dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/moneybag" />

            <TextView
                android:id="@+id/moneyScore"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="1"
                android:textColor="#ffffff"
                android:textSize="18dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="572dp"
            android:background="@color/colorPrimaryDarkish">

            <TextView
                android:id="@+id/tvClickspeed"
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <ImageView
            android:id="@+id/ivPlayButton"
            android:layout_width="match_parent"
            android:layout_height="397dp"
            android:layout_alignParentBottom="true"

            android:layout_marginBottom="146dp"
            android:contentDescription="@string/ivPlay_name"

            android:onClick="getPoint"
            android:src="@drawable/virus_btn"
            app:layout_constraintBottom_toTopOf="@+id/topTable" />

        <Button
            android:id="@+id/openMenu"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/shop_btn"
            android:enabled="true"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayButton" />

    </RelativeLayout>


</LinearLayout>