<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ivMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/ivMain"
            android:scaleType="centerCrop"
            android:src="@drawable/main_menu_bg" />

        <TableRow
        android:id="@+id/topTable"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:text="@string/tvScore"
            android:textColor="#ffffff"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tvCurrentScore"
            android:layout_width="41dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/moneybag"
            android:layout_width="56dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/moneybag" />

        <TextView
            android:id="@+id/moneyScore"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="1"
            android:textColor="#ffffff"
            android:textSize="24dp" />


        <TextView
            android:id="@+id/tvDifficulty"
            android:layout_width="172dp"
            android:layout_height="61dp"

            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:textSize="24dp"

            />



    </TableRow>


        <TableRow
            android:id="@+id/topTable2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="480dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/tvClickSpeed"
                android:layout_width="375dp"
                android:layout_height="51dp"
                android:layout_marginTop="5px"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="198dp"
                android:textColor="#ffffff"
                android:textSize="24dp" />
        </TableRow>

        <ImageView
            android:id="@+id/ivPlayButton"
            android:layout_width="match_parent"
            android:layout_height="348dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="122dp"
            android:contentDescription="@string/ivPlay_name"

            android:onClick="getPoint"
            android:src="@drawable/science1" />

        <TableRow
        android:id="@+id/tableBot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp">

    </TableRow>

        <Button
            android:id="@+id/openMenu"
            android:layout_width="213dp"
            android:layout_height="94dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="179dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/shop_unpressed"
            android:enabled="true" />

        <Button
            android:id="@+id/resetGame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:layout_marginStart="-187dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/repeat_unpressed"
            android:enabled="true" />

    </RelativeLayout>

</LinearLayout>